fix(custom-area): :bug: remove shifting when selecting custom area
#7

--- a/content-full-page.css
+++ b/content-full-page.css
@@ -1,7 +1,5 @@
 #snapper-full-page-canvas {
     z-index: 99999;
-    /* position: fixed; */
     top: 100;
     left: 100;
-    border-radius: 1px solid red;
 }
